--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">VehicleDatacollection</string>
+    <string name="sensors">Sensores</string>
+    <string name="accelerometer">Acelerómetro</string>
+    <string name="gyroscope">Giróscopio</string>
+    <string name="magnetometer">Magnetómetro</string>
+    <string name="gps">GPS</string>
+    <string name="m_s2">m/s<sup><font size="2">2</font></sup></string>
+    <string name="rad_s">rad/s</string>
+    <string name="micro_tesla">μT</string>
+    <string name="x_equal">X=</string>
+    <string name="y_equal">Y=</string>
+    <string name="z_equal">Z=</string>
+    <string name="latitude">Latitud</string>
+    <string name="longitude">Longitud</string>
+    <string name="altitude">Altitud</string>
+    <string name="value">value</string>
+    <string name="start">Comenzar</string>
 </resources>
