--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="latitude">Latitud</string>
     <string name="longitude">Longitud</string>
     <string name="altitude">Altitud</string>
+    <string name="speed">Velocidad</string>
     <string name="value">value</string>
     <string name="start">Comenzar</string>
 </resources>
