Buttons and Queries ready to send

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">VehicleDatacollection</string>
     <string name="sensors">Sensores</string>
@@ -26,7 +27,11 @@
     <string name="time_lecture">Time</string>
     <string name="kinematic_data_register">Cinematicos</string>
     <string name="gps_data_register">GPS</string>
-    <string name="near_crashes_register">Near-crashes</string>
+    <string name="near_crashes_register">Eventos <br/> Near-crashes</string>
     <string name="frequency">Frecuencia</string>
     <string name="error_frequency">Invalido!! la frecuencia no debe ser 0</string>
+    <string name="send_trip_data">Enviar Datos de Viaje</string>
+    <string name="id_vehicle">Id vehículo</string>
+    <string name="mean_frequency">Frecuencia promedio</string>
+    <string name="data_captured">Datos Capturados</string>
 </resources>
