CHG: id of each record with the 'row n' format

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,16 +53,20 @@
     <string name="collect_data">Recolección de datos</string>
 
     <!-- Spinners' Arrays -->
+    <string name="readable_spn_vehicles">Lista de vehículos</string>
     <string-array name="vehicles_array">
+        <item>Test (Huawei Mate 20 Lite)</item>
+        <item>Test (Xiaomi Redmi Note 9S)</item>
         <item>Renault Stepway (Huawei Mate 20 Lite)</item>
         <item>Renault Stepway (Xiaomi Redmi Note 9S)</item>
-        <item>Kia Picanto (Huawei Mate 20 Lite)</item>
-        <item>Kia Picanto (Xiaomi Redmi Note 9S)</item>
+        <item>Nissan March (Huawei Mate 20 Lite)</item>
+        <item>Nissan March (Xiaomi Redmi Note 9S)</item>
     </string-array>
 
     <string name="readable_spn_routes">Lista de rutas</string>
     <string name="additional_info">Información adicional</string>
     <string-array name="routes_array">
+        <item>Test</item>
         <item>Aceleración repentina</item>
         <item>Frenada repentina</item>
         <item>Giro derecho agresivo</item>
